# archive-opensearch

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  __init__.py  manage.py  pyproject.toml  requirements.txt  setup.py
archive_opensearch/: manage.py
archive_opensearch/ceda_opensearch/: settings.py  urls.py  wsgi.py
archive_opensearch/django_opensearch/: apps.py  views.py
archive_opensearch/django_opensearch/opensearch/: opensearch.py
archive_opensearch/django_opensearch/templatetags/: namespace_tags.py
archive_opensearch/events/: apps.py  tests.py  urls.py
archive_opensearch/manifest/: apps.py  urls.py
ceda_opensearch/: facets_json.json  opensearch_settings.py  settings.py  urls.py  wsgi.py
django_opensearch/: __init__.py  apps.py  constants.py  default_settings.py  settings.py  tests.py  urls.py  views.py
django_opensearch/management/commands/: __init__.py  cache_large_datasets.py  retrieve_vocab_cache.py
django_opensearch/opensearch/: elasticsearch_connection.py  opensearch.py
django_opensearch/opensearch/backends/: base.py
django_opensearch/opensearch/facets/: __init__.py  base.py  cci.py  cmip5.py  collection_map.py
django_opensearch/templates/: description.xml  response.xml
django_opensearch/templatetags/: __init__.py  coordinate_tags.py  namespace_tags.py
django_opensearch_nested/: apps.py  default_settings.py  views.py
django_opensearch_nested/opensearch/: opensearch.py
django_opensearch_osddvars/: apps.py  default_settings.py  urls.py  views.py
django_opensearch_osddvars/opensearch/: opensearch.py
django_opensearch_osddvars/templates/: response.xml
events/: models.py  serialisers.py  tests.py  urls.py  views.py
events/migrations/: 0001_initial.py
manifest/: views.py
search/: urls.py  views.py
(+87 files in other folders)
